# homm1extract

./: .gitignore  README.md  homm1_extract.py
cpp_version/: CMakeLists.txt  CMakeLists_unix.txt
cpp_version/src/: agg.cpp  agg.h  bmp.cpp  bmp.h  icn.cpp  icn.h  image.cpp  image.h  main.cpp  palette.cpp  palette.h  til.cpp  til.h
